--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -43,6 +43,7 @@
            <h2>Rent Your First Space Today!</h2>
            <h2>Rent Your First Space Today!</h2>
            <h2>Rent Your First Space Today!</h2>
+           <h2>Rent Your First Space Today!</h2>
 
            
            <h2>Rent Your First Space Today!</h2>
