--- a/public/login.html
+++ b/public/login.html
@@ -20,7 +20,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="/">Home</a></li>
                     <li><a href="/signup">Sign Up</a></li>
-                    <li><a href="/dashboard">Dashboard</a></li>
+                    <li><a href="/profile">Dashboard</a></li>
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
@@ -43,10 +43,17 @@
                         <label>Password:</label>
                         <input class="form-control" required type="password" name="password"/>
                     </div>
-                    <div class="form-group">
+
+                                        <div class="form-group">
                         <input class="btn btn-primary" type="submit" value="Log In"/>
                     </div>
-                </form>                  
+                </form>
+                <div class="forgot">
+                    <a href="/email-send">Forgot Password?</a>
+                </div>
+                
+                
+
             </div>          
         </div>
 
