--- a/public/signup.html
+++ b/public/signup.html
@@ -46,7 +46,7 @@
                     <ul class="nav navbar-nav">
                         <li><a href="/">Home</a></li>
                         <li><a href="/signup">Sign Up</a></li>
-                        <li><a href="/dashboard">Dashboard</a></li>
+                        <li><a href="/profile">Dashboard</a></li>
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
