--- a/public/signup.html
+++ b/public/signup.html
@@ -58,7 +58,7 @@
               </nav>
 
 
-            <h1>Welcome to Loure Homes</h1>
+            <h1>Welcome to Louere Homes</h1>
         </div>
 
        
